# moba_try_4

./: .gitignore  Cargo.toml  ideas.md  terrain.json  todo.md
deploy/: lobby-server
engine/: Cargo.toml
engine/src/: actor.rs  anim.rs  lib.rs  terrain.rs
engine/src/actor/: health.rs  mod.rs  projectile.rs  structure.rs  unit.rs
engine/src/actor/structure/: nexus.rs  tower.rs
engine/src/actor/unit/: attack.rs  champion.rs  mod.rs
engine/src/actor/unit/champion/: champ_1.rs  mod.rs
game/: Cargo.toml
game-server/: Cargo.toml
game-server/src/: lib.rs  main.rs
game/assets/: champ1.blend  champ1.blend1  champ1.glb  champ1.gltf  nexus.blend  nexus.blend1
game/src/: button.rs  game.rs  lobby.rs  main.rs  terrain_editor.rs
lobby-server/: Cargo.toml
lobby-server/src/: lib.rs  main.rs
