[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
lobby-server = { path = "../lobby-server" }
bevy = { version = "0.14", features = [] }
uuid = { version = "1", features = ["v4", "serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parry2d = "0.17"
rand = "0.8"