[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lobby-server = { path = "../lobby-server" }
engine = { path = "../engine" }
bevy = { version = "0.14", features = ["dynamic_linking"] }
clap = {version = "4", features = ["derive"]}
serde = { version = "1", features = ["derive"] }